Integrated Susan's comments

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -19,7 +19,7 @@ semantic behavior. </p>
     (Dragging and dropping the file is similar to selecting the file and
     choosing <strong>Refactor &gt; Move </strong>from the context menu.
   </li>
-  <li> You will be prompted as to whether you want to update references to the
+  <li> You will be prompted select whether or not to update references to the
     file you are moving. Typically, you will want to do this to avoid compile errors. You can
     press the <strong>Preview </strong>button to see the list of changes that
     will be made as a result of the move.
@@ -42,9 +42,9 @@ semantic behavior. </p>
     </p>
   </li>
   </ol>
-  <p>Using the context menu is an alternative to the drag and drop.&nbsp; When
+  <p>The context menu is an alternative to using drag and drop.&nbsp; When
   using the menu, you must specify a target package in the Move dialog, in
-  addition to the update references options you've already seen.</p>
+  addition to selecting the update references options you've already seen.</p>
   <ol>
   <li> 
     Select the <em>MyTestCase.java</em> file and from its context menu, select <strong>Refactor 
