--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -11,7 +11,7 @@
 <h1> Searching the workbench </h1>
 <p> In this section, you will search the workbench for Java elements. </p>
 <p> In the Search dialog, you can perform file, text or Java searches. Java searches 
-  operate on the structure of the code. With File searches operate on the files 
+  operate on the structure of the code. File searches operate on the files 
   by name and/or text content. Java searches are faster, since there is an
 underlying indexing structure for the code structure.  Text searches allow
 you to find matches inside comments and strings. 
