--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -47,8 +47,8 @@
         display the <strong>Installed Java Runtime Environments</strong> preference page. Confirm
         that a JRE has been detected. By default, the JRE used to run the workbench will be used to build and run 
         Java programs. It should appear with a check mark in the list of installed JREs. We recommend that you
-        use a Java SDK instead of a JRE. A SDK is designed for development and contains the source code for the
-        Java library hence easing debugging. Additional SDK can be added by searching the harddrive for installed
+        use a Java SDK instead of a JRE. An SDK is designed for development and contains the source code for the
+        Java library hence easing debugging. Additional SDKs can be added by searching the harddrive for installed
         SDKs. To do so simply click the <strong>Search</strong> button and specify a root folder for the search.
 		<p>
 		<img src="../images/qs-1.gif" alt="Installed JREs preference page">
@@ -82,11 +82,11 @@
       Installing the JDT example plug-ins
     </h2>
     <p>
-      The JDT example plug-ins contribute a New Wizard that automatically creates a sample project in your workbench. For this tutorial,
+      The JDT example plug-ins contribute a New Wizard that automatically creates a sample project in your workbench. In this tutorial,
       you will
-    manually create our new project in order to review the steps involved.&nbsp;
-      But first you must download and install
-    the examples if you have not done so already.
+    manually create a new project in order to review the steps involved.&nbsp;
+      But first you need to download and install
+    the examples (if you have not done so already).
     </p>
     <ol>
       <li>
