--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -25,7 +25,7 @@
       <li>
         On the left pane of the first wizard page, select <strong>Java</strong>, and on the right pane, select <strong>Java Project</strong>. Then click <strong>Next</strong>.
         On the next page, type &quot;JUnit&quot; in the <strong>Project name</strong> 
-        field and click <strong>Finish</strong>. A Java perspective opens within the workbench with the new Java
+        field and click <strong>Finish</strong>. A Java perspective opens inside the workbench with the new Java
         project in the Package Explorer. When the Java perspective is active, new menu options and Java specific buttons are loaded in the workbench toolbar. Depending on which
         view or editor is active, other buttons and menu options will be available.
 		<p>
@@ -44,7 +44,7 @@
          <strong>Note:</strong> This step assumes that the JDT example plug-ins have been downloaded and installed.<br>
       </li>
       <li>
-        Below the hierarchy list in the Import wizard, click the <strong>Select All</strong> button. You can expand and select elements within the <em>junit</em> directory
+        In the Import wizard, below the hierarchy list click <strong>Select All</strong>. You can expand and select elements within the <em>junit</em> directory
         on the left pane to view the individual resources that you are importing on the right pane. <em>Note: Do not deselect any of the resources in the</em> junit directory at
         this time. You will need all of these resources in the tutorial.
 		<p>
@@ -54,10 +54,10 @@
       <li>
         Make sure that the JUnit project appears in the destination <strong>Folder</strong> field. Then click <strong>Finish</strong>. In the import progress indicator, notice
         that the imported resources are compiled as they are imported into the workbench. This is because the <strong>Perform build automatically on resource modification</strong>
-        option is checked on the Workbench preferences page. (You will be
+        option is checked on the Workbench preferences page. You will be
         prompted to overwrite the .classpath file in the JUnit project. 
         This is because the .classpath resource was created for you when you
-        created the JUnit project. It is safe to overwrite this file.)
+        created the JUnit project. It is safe to overwrite this file.
       </li>
       <li>
         In the Package Explorer view, expand the JUnit project to view the JUnit packages.
