--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -79,7 +79,7 @@ classes and members in a variety of different ways. </p>
 	</p>
   </li>
   <li> Use <strong>Previous Type Hierarchies</strong> to go back to a previously 
-    opened element. Click on the arrow next to the button to see a menu or click 
+    opened element. Click on the arrow next to the button to see a list of elements or click 
     on the button to edit the history list.
 	<p>
     <img src="../images/qs-33b.gif" alt="History menu"> 
