--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -23,16 +23,16 @@ ruler of your source code. </p>
     </p>
   </li>
   <li> Click the <strong>Save</strong> button. The project is rebuilt
-    and the problem is indicated in several ways as follows: 
+    and the problem is indicated in several ways: 
     <ul>
-      <li> In the Tasks view, the problems are listed </li>
+      <li> In the Tasks view, the problems are listed, </li>
       <li> In the Package Explorer view, the Type Hierarchy or the Outline view, 
-        problem ticks appear on the affected Java elements and their parent elements&nbsp; 
+        problem ticks appear on the affected Java elements and their parent elements, 
       </li>
-      <li> In the editor's vertical ruler, a problem marker is displayed near the affected line 
+      <li> In the editor's vertical ruler, a problem marker is displayed near the affected line, 
       </li>
-      <li> Squiggly lines appear under the word which might cause the error </li>
-      <li> The editor tabs are annotated with a problem marker </li>
+      <li> Squiggly lines appear under the word which might cause the error, and</li>
+      <li> The editor tabs are annotated with a problem marker. </li>
     </ul>
     <p><img src="../images/qs-35.gif" alt="Problem marker in Package Explorer, editor and Tasks view"> 
     </p>
@@ -72,7 +72,7 @@ ruler of your source code. </p>
   <li> Select 'Change to fName' to fix the problem. The problem highlight 
     line will disappear as the correction is applied. </li>
   <li> Close the file without saving. </li>
-  <li> You can control how problems are indicated on the <strong>Window 
+  <li> You can configure how problems are indicated on the <strong>Window 
     &gt; Preferences &gt; Java &gt; Editor </strong>page on the <strong>Annotations
     </strong>tab. </li>
 </ol>
