--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -25,7 +25,7 @@ semantic behavior. </p>
     class, press <strong>Preview &gt;</strong>.
   </li>
   <li> The workbench analyzes the proposed change and presents you with a preview 
-    of the changes that would take place if you actually choose to rename this 
+    of the changes that would take place if you rename this 
     resource.&nbsp;<p>Since renaming a compilation unit will affect the import
     statements in other compilation units, there are other compilation units
     affected by the change.&nbsp; These are shown in a list of changes in the
@@ -33,7 +33,7 @@ semantic behavior. </p>
     <p> <img src="../images/qs-39.gif" alt="Refactoring wizard preview page"> 
     </p>
   </li>
-  <li> On the Refactoring preview page, you can scroll through the various proposed 
+  <li> On the Refactoring preview page, you can scroll through the proposed 
     changes and select or deselect changes, if necessary.&nbsp; You will
     typically accept all of the proposed changes. </li>
   <li> Click&nbsp;<strong>OK</strong>  to accept all proposed changes. </li>
