--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -36,14 +36,14 @@
   </li>
   <li> Select the&nbsp;<em>TestCase</em> class and click&nbsp;<strong>OK</strong>. 
   </li>
-  <li> Check the&nbsp;<strong>Constructors from superclass</strong> checkbox. 
+  <li> Select the checkbox for&nbsp;<strong>Constructors from superclass</strong>. 
   </li>
   <li> Click&nbsp;<strong>Finish</strong> to create the new class. 
     <p> <img src="../images/qs-43.gif" alt="Java Class wizard"> 
     </p>
   </li>
-  <li> The newly created file is opened in the editor. It contains the new class,
-    the constructor and comments.&nbsp; You can control the creation and
+  <li> The new file is opened in the editor. It contains the new class,
+    the constructor and comments.&nbsp; You can select options for the creation and
     configuration of generated comments in the Java preferences (<strong>Window &gt; Preferences &gt; Java &gt; Code Generation &gt; Code
     and Comments</strong>).</li>
   <li> In the Outline view select the new class&nbsp;<em>MyTestCase</em>. Open 
@@ -74,7 +74,7 @@
     <p> <img src="../images/qs-43e.gif" alt="Generate Getter and Setter in context menu"> 
     </p>
   </li>
-  <li> The Generate Getter and Setter dialog suggests creating the methods getContainer 
+  <li> The Generate Getter and Setter dialog suggests that you create the methods getContainer 
     and setContainer. Select both and click <strong>OK</strong>. A getter 
     and setter method for the field container are added. 
     <p> <img src="../images/qs-43f.gif" alt="Generate Getter and Setter dialog"> 
