--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-AddMethod.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-AddMethod.htm
@@ -21,11 +21,11 @@
 		<p>
 		<img src="../images/qs-13.gif" alt="New method in outline view">
 		</p>
-		Furthermore an error annotation (red square) appears in the overview ruler positioned on the right hand side 
+		In addition, an error annotation (red square) appears in the overview ruler positioned on the right hand side 
 		of the editor. This error annotation indicates that the compilation unit is currently not correct. If you hover
-		over the red square you get a tool tip saying <em>Unmatched bracket</em>, which is correct since we entered
-		an opening curly bracket without the corrsponding closing bracket. Note that error annotation in the editor's
-		rulers are updated on typing. This behaviour can be controlled via the preference page <strong>Java &gt; 
+		over the red square a tool tip appears, <em>Unmatched bracket</em>, which is correct since we entered
+		an opening curly bracket without the corrsponding closing bracket. Note that error annotations in the editor's
+		rulers are updated as you type. This behaviour can be controlled via the preference page <strong>Java &gt; 
 		Editor &gt; Annotations</strong>.
 		<p>
 		<img src="../images/qs-13a.gif" alt="Error annotations in overview ruler">
