--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-EditorTemplates.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-EditorTemplates.htm
@@ -27,10 +27,10 @@
         </code></p>
       </li>
       <li>
-        With the cursor at the end of <code>for</code>, type <kbd>Ctrl</kbd>+<kbd>Space</kbd> to enable content assist.&nbsp;
+        With the cursor at the end of <code>for</code>, press <kbd>Ctrl</kbd>+<kbd>Space</kbd> to enable content assist.&nbsp;
         You will see a list of common templates for &quot;for&quot; loops.&nbsp;
         When you hover over a template, you'll see the code for the template in
-        its help.&nbsp; Note that the local array name is guessed automatically.
+        its help message.&nbsp; Note that the local array name is guessed automatically.
 		<p>
 		<img src="../images/qs-17b.gif" alt="Content assist for for">
 		</p>
@@ -43,7 +43,8 @@
 		</p>
       </li>
       <li>
-        Next we change the name of the index variable from <em>i</em> to <em>e</em>. To do so simply press <kbd>e</kbd>. 
+        Next we change the name of the index variable from <em>i</em> to <em>e</em>. To do so simply press <kbd>e</kbd>, as
+        the index variable is automatically selected. 
         Observe that the name of the index variable changes at all places. When inserting a template all template 
         variable with the same name are connected to each other. So changing one changes all the other values 
         as well.
@@ -58,7 +59,7 @@
 		<img src="../images/qs-17c2.gif" alt="Inserted for template">
 		</p>
         Since we don't want to change the name (it was guessed right by the template) we press
-        tab again, which leaves the template since there aren't any variables to edit left.
+        tab again, which leaves the template since there aren't any variables left to edit.
       </li>
       <li>
         Complete the <code>for</code> loop as follows:<br>
@@ -70,7 +71,7 @@
         </code></p>
       </li>
       <li>
-        With the cursor at the end of <code>to</code>, type <kbd>Ctrl</kbd>+<kbd>Space</kbd> to enable content assist. Pick <code>toarray - convert collection to array</code>
+        With the cursor at the end of <code>to</code>, press <kbd>Ctrl</kbd>+<kbd>Space</kbd> to enable content assist. Pick <code>toarray - convert collection to array</code>
         and press <kbd>Enter</kbd> to confirm the selection (or double-click the
         selection).
 		<p>
