--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ExtractMethod.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ExtractMethod.htm
@@ -14,7 +14,7 @@
     </h1>
     <p>
       In this section, you will improve the code of the constructor of <em>junit.framework.TestSuite</em>. 
-      To make the intent of the code more clear, you will extract the code that collects test cases 
+      To make the intent of the code clearer, you will extract the code that collects test cases 
       from base classes into a new method called <em>collectTestMethods</em>.
     </p>
     <ol>
