--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OpenJavaEditor.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OpenJavaEditor.htm
@@ -13,8 +13,7 @@
       Opening a Java Editor
     </h1>
     <p>
-      In this section, you will learn how to open an editor for Java files. Futhermore the sections explains
-      some of the basic Java editor features.
+      In this section, you will learn how to open an editor for Java files.  You will also learn about some of the basic Java editor features.
     </p>
     <p>
 		<ol>
@@ -66,7 +65,7 @@
 		  </li>
 		  <li> Press the <strong>Show Source of Selected Element Only</strong> button 
 		    again to see the whole Java file again. In the Outline view, select different 
-		    elements and note that they are once again displayed in a whole file view 
+		    elements and note that they are again displayed in a whole file view 
 		    in the editor. The Outline view selection now contains a range indicator 
 		    on the vertical ruler on the left border of the Java editor that indicates
 		    the range of the selected element.
