--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OrganizeImports.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OrganizeImports.htm
@@ -13,7 +13,7 @@
       Organizing imports
     </h1>
     <p>
-      In this section you will use organize the import declarations in your
+      In this section you will organize the import declarations in your
       source code.&nbsp; Open <em>junit.samples.VectorTest.java</em> file in the Java
       editor if you do not already have it open.
     </p>
