--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-StartingNewJavaProject.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-StartingNewJavaProject.htm
@@ -12,8 +12,8 @@
     <h1>
       Starting a new Java Project
     </h1>
-    <p>In this section, we will create a new Java project and explain the different components of a Java project. Once you are done,
-    you should be able to handle more complex layouts.
+    <p>In this section, we will create a new Java project and explain the different components of a Java project. This will 
+    prepare you for handling more complex layouts.
     </p>
 
 	<ol>
@@ -34,38 +34,37 @@
         <p><img src="../images/qs-snjp3.gif" alt="Add Folder Settings"></p>
      </li>
     <li>Type &quot;src&quot; in the <strong>Folder name</strong> field and click <strong>OK</strong>.<br>
-    <blockquote>NOTE: If you want to use an existing folder outside of the workspace, you
-    check <strong>Link to folder in the file system</strong> and browse to the desired folder.
+    <blockquote>NOTE: If you want to use an existing folder outside of the workspace, select the 
+    checkbox <strong>Link to folder in the file system</strong> and browse to the desired folder.
     </blockquote>
         <p><img src="../images/qs-snjp4.gif" alt="Folder Name Settings"></p>
     </li>
     <li>Click <strong>OK</strong> again.
     </li>
-    <li>You will be prompted to know if you want to remove the project as source folder and update the build output
-    folder to &quot;MyProject/bin&quot;. The builder writes the generated .class file to the output folder.
-    &quot;MyProject/bin&quot; is considered as the <i>default output folder for the project</i>. Click <strong>Yes</strong>.<br>
+    <li>You will be prompted whether or not to remove the project as a source folder and update the build output
+    folder to &quot;MyProject/bin&quot;. The builder will write the generated .class file to the output folder and 
+    &quot;MyProject/bin&quot; will become the <i>default output folder for the project</i>. Click <strong>Yes</strong>.<br>
         <p><img src="../images/qs-snjp5.gif" alt="Create New Java Project"></p>
    </li>
-    <li>You will end up with this wizard.<br>
+    <li>You will then be at this wizard.<br>
         <p><img src="../images/qs-snjp6.gif" alt="Resulting Java Project Wizard"></p>
     </li>
-    <li>If you want to set an output folder  per source folder, you need to check <strong>Allow output folders for source
+    <li>If you want to set an individual output folder for each source folder, you need to select the checkbox <strong>Allow output folders for source
     folders</strong>.
     Specify the desired output folder by double-clicking on this new item.<br>
         <p><img src="../images/qs-snjp7.gif" alt="Setting output folder per source folder"></p>
     </li>
-    <li>You can repeat steps 4 to 7 if you want to create multiple source folders.
-    <blockquote>NOTE: You might want to create all source folders at step 6, but be sure you select the project name for each source folder.
-    Before clicking <strong>OK</strong>, you need to select <u>all source folders you created</u>.<br>
+    <li>To create multiple source folders, repeat steps 4 to 7.
+    <blockquote>NOTE: You may want to create all source folders at step 6, but be sure you select the project name for each source folder.
+    You will also need to select all the source folders you have created before confirming with <strong>OK</strong>.<br>
         <p><img src="../images/qs-snjp8.gif" alt="Multiple source folders creation"></p>
     </blockquote>
-    Screen shot with multiple source folders:<br>
+    Here is the wizard again, with multiple source folders:<br>
     <p><img src="../images/qs-snjp9.gif" alt="Multiple source folders"></p>
     </li>
     <li>You now have a new Java Project in which you can add source files. If you don't want the builder to clean up the output folders during
     a full build, go to the <strong>Properties</strong> of your Java Project.
-    </li>
-    <li>Go to <strong>Java Compiler &gt; Use project settings &gt; Build path...</strong> and uncheck <strong>Scrub output folders on full build</strong>.<br>
+    Select <strong>Java Compiler &gt; Use project settings &gt; Build path...</strong> and uncheck <strong>Scrub output folders on full build</strong>.<br>
     <p><img src="../images/qs-snjp10.gif" alt="Setting scrubbing of output folder"></p>
     </li>
 	</ol>    
