--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
@@ -22,7 +22,7 @@
         <em>testCapacity()</em> in the Outline view.
       </li>
       <li>
-      	Change the content of the method so that the for statements reads as:<br>
+      	Change the content of the method so that the 'for' statements reads as:<br>
       	<p><code>
       	for (int i= 0; i &lt; 99; i++)
       	</code></p>
@@ -41,30 +41,30 @@
 		</p>
       </li>
       <li>
-        In the Local History pane, select the version that you changed, then click the <strong> Replace 
-        button</strong>. In the Java editor, the method is replaced with the selected history version.
+       In the Local History pane, select the method that you changed, then click the <strong> Replace 
+       button</strong>. In the Java editor, the method is replaced with the selected history version.
       </li>
       <li>
         Save the file.
       </li>
       <li>
-        Beside replacing a method's version with a previous one you can also restore Java elements that got
-        deleted. Again select the method <em>testCapacity()</em> in the Outline view, and form its context
+        Beside replacing a method's version with a previous one you can also restore Java elements that were 
+        deleted. Again, select the method <em>testCapacity()</em> in the Outline view, and from its context
         menu, select <strong>Delete</strong>. Confirm the resulting dialog with <strong>Yes</strong> and
         save the file. 
       </li>
       <li>
         Now select the type <em>VectorTest</em> in the Outline view, and from its context menu, select
         <strong>Restore from Local History...</strong>. Select and check the method <em>testCapacity()</em>
-        in the Available Java Elements pane. As before the Local History pane shows the versions saved 
-        in the local histroy. The Java Source Compare pane shows details of the differences between the 
+        in the Available Java Elements pane. As before, the Local History pane shows the versions saved 
+        in the local histroy. The Java Source Compare pane shows the details of the differences between the 
         selected history version and the existing workbench resource.
 		<p>
 		<img src="../images/qs-15a.gif" alt="Restore from local history">
 		</p>
       </li>
       <li>
-        In the Local History pane, select the first version and then click <strong>Restore</strong>.
+        In the Local History pane, select the earlier version and then click <strong>Restore</strong>.
     </ol>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
