--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-Navigate.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-Navigate.htm
@@ -19,15 +19,14 @@
 	  <li> On the first line of the MoneyTest class declaration, select the
 	    superclass TestCase and either 
 	    <ul>
-	      <li> select from the menu bar Navigate &gt; Open Declaration or </li>
+	      <li> from the menu bar select Navigate &gt; Open Declaration or </li>
 	      <li> press <kbd>F3</kbd>. </li>
-	    </ul>
-	    <em>Note: This command also works on methods and fields.</em>
+	    </ul>	    
 		<p>
 	    <img src="../images/qs-24.gif" alt="Menu open declaration">
 		</p>
 	    The TestCase class opens in the editor area and is also represented in 
-	    the Outline view.
+	    the Outline view. <br><em>Note: This command also works on methods and fields.</em>
 		<p>
 	    <img src="../images/qs-25.gif" alt="Opened declaration">
 		</p>
@@ -35,7 +34,7 @@
 	  <li> With the <em>TestCase.java</em> editor open and the class declaration
 	    selected: 
 	    <ul>
-	      <li> select from the menu bar Navigate &gt; Open Type Hierarchy or </li>
+	      <li> from the menu bar select Navigate &gt; Open Type Hierarchy or </li>
 	      <li> press <kbd>F4</kbd>. </li>
 	    </ul>
 		<p>
