*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
@@ -83,7 +83,8 @@ label decorations that indicate the CVS state of the resource.
 </p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-<a href="../reference/ref-47.htm">CVS</a>
+<a href="../reference/ref-47.htm">CVS</a><br>
+<a href="../reference/ref-cvs-decorations.htm">CVS Label Decorations</a>
 </p>
 
 <p>&nbsp;<br>
