--- a/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
@@ -56,9 +56,11 @@
   <tr>
     <td width="30%" valign="top" align="right"><strong>Interesting<br>new API</strong></td>
     <td width="70%" valign="top" align="left">
-      <strong><code>Display.getDismissalAlignment():</code></strong> Returns the ordering that should
+      <strong><code>Combo.cut(), copy(), paste():</code></strong> Methods for transferring
+        between a Combo's selection and the system clipboard.
+      <p><strong><code>Display.getDismissalAlignment():</code></strong> Returns the ordering that should
         be used when positioning the default dismissal button for a dialog.  This allows dialogs to define
-        button orderings so as to match platform policy.
+        button orderings so as to match platform policy.</p>
       <p align="center"><img border="0" src="images/swt-buttonOrder.gif" alt="Cancel/OK button ordering" width="317" height="145"></p>
       <p><strong><code>Font(Device, FontData[]):</code></strong> Creates a font from an array of
         <code>FontData</code> objects.  This is important since any application that wishes to run properly
