*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
@@ -44,8 +44,8 @@
   <tr>
     <td width="30%" valign="top" align="right"><strong>GTK</strong></td>
     <td width="70%" valign="top" align="left">Drag and drop is now fully implemented on SWT/gtk.</p>
-      <p>SWT/gtk now uses native Table and Tree widgets.
-      <p align="center"><img border="0" src="images/swt-gtktree.gif" alt="Native gtk tree" width="176" height="177"></p>
+      <p>SWT/gtk now uses gtk 2.x Table and Tree widgets.
+      <p align="center"><img border="0" src="images/swt-gtktree.gif" alt="gtk 2.x tree" width="176" height="177"></p>
     </td>
   </tr>
   <tr>
