*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
@@ -32,8 +32,8 @@
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><strong>Mac OS X</strong></td>
-    <td width="70%" valign="top" align="left">SWT/MacOSX is more stable
-      and feature complete than its 2.0 predecessor.
+    <td width="70%" valign="top" align="left">SWT/MacOSX is much more
+      feature complete and stable than its 2.0 predecessor.
     </td>
   </tr>
   <tr>
@@ -62,6 +62,8 @@
         be used when positioning the default dismissal button for a dialog.  This allows dialogs to define
         button orderings so as to match platform policy.</p>
       <p align="center"><img border="0" src="images/swt-buttonOrder.gif" alt="Cancel/OK button ordering" width="317" height="145"></p>
+      <p><strong><code>Display.toDisplay/Control(int,int):</code></strong> Convenience methods for converting widget-relative
+        coordinates to display-relative coordinates and vice versa.</p>
       <p><strong><code>Font(Device, FontData[]):</code></strong> Creates a font from an array of
         <code>FontData</code> objects.  This is important since any application that wishes to run properly
         on SWT/motif in DBCS languages should treat a <code>Font</code>’s collection of <code>FontData</code>
