--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -82,10 +82,8 @@ and Tricks.]</p>
       advanced search filtering. Working sets are persisted from one Eclipse session 
       to the next, and can be used in workbench help searches or from the Help 
       browser. They allow narrowing searches down as far as a section of a book. 
-      <ul>
-        <li>
-          <p align="center"><img border="0" src="images/help-working-set.gif" align="left" width="435" height="321"></li>
-      </ul></td>
+      <p><img border="0" src="images/help-working-set.gif" align="left" width="435" height="321">
+    </td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Help bookmarks</b></td>
@@ -323,13 +321,15 @@ and Tricks.]</p>
     <td width="30%" valign="top" align="right"><b>Restoring removed resources</b></td>
     <td width="70%" valign="top" align="left">Select the parent resource and use <b>Restore 
     from Local History</b> to restore removed resources.  You can restore more than one 
-    resource at one time.</td>
+    resource at one time.
+    <p><img border="0" src="images/restore-local.gif"></p></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Creating path variables</b></td>
     <td width="70%" valign="top" align="left">You can define a path variable when you 
     create a linked resource or you can use the <b>Window &gt; Preferences &gt; Workbench 
-    &gt; Linked Resources</b> preference page to define path variables.</td>
+    &gt; Linked Resources</b> preference page to define path variables.
+    <p><img border="0" src="images/path-vars.gif"></p></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Extending path variables</b></td>
@@ -342,7 +342,8 @@ and Tricks.]</p>
   <tr>
     <td width="30%" valign="top" align="right"><b>Collapsing the resource tree</b></td>
     <td width="70%" valign="top" align="left">Use the <b>Collapse All</b> button on the view 
-    toolbar to collapse all projects and folders in the Navigator view.</td>
+    toolbar to collapse all projects and folders in the Navigator view.
+    <p><img border="0" src="images/collapse-all.gif"></p></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Importing an existing project</b></td>
@@ -393,7 +394,8 @@ and Tricks.]</p>
   <tr>
     <td width="30%" valign="top" align="right"><b>Viewing resource properties</b></td>
     <td width="70%" valign="top" align="left">Use the Properties View as a way to quickly view the properties for more 
-    than one resource. Using the view will be faster than opening the Properties Dialog for each resource.</td>
+    than one resource. Using the view will be faster than opening the Properties Dialog for each resource.
+    <p><img border="0" src="images/props-view.jpg"></p></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Deleting completed tasks</b></td>
@@ -406,13 +408,15 @@ and Tricks.]</p>
     <td width="70%" valign="top" align="left">The <b>Window &gt Keyboard Shortcuts</b> menu includes a number of 
     accelerators for quickly navigating amongst the various views, editors, perspectives and menus in the workbench.  
     These short cuts include <b>Ctrl-F8</b> for switching amongst perspectives, <b>Ctrl-F7</b> for switching amongst views, 
-    <b>Ctrl-F6</b> for switching amongst editors and <b>F12</b> for activating an editor.</td>
+    <b>Ctrl-F6</b> for switching amongst editors and <b>F12</b> for activating an editor.
+    <p><img border="0" src="images/keyboard-shortcut.gif"></p></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Reordering editor tabs</b></td>
     <td width="70%" valign="top" align="left">You can rearrange the order of open editors by using drag and drop.  
     Grab the Editor tab and drag it to the position you want the editor to appear.  Note 
-    that when positioning editors, the drop icon will look as follows:</td>
+    that when positioning editors, the stack icon <img align="texttop" border="0" src="../images/drop_stack.gif"  alt="Stack icon">
+    will be used as the drop icon.</td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Rearranging fast view buttons</b></td>
@@ -420,10 +424,12 @@ and Tricks.]</p>
     appear on the shortcut bar.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>Splitting the editor workarea</b></td>
+    <td width="30%" valign="top" align="right"><b>Tiling the editor workarea</b></td>
     <td width="70%" valign="top" align="left">You can use drag and drop to modify the layout of your editor 
-    workarea.  Grab an editor tab and drag it to the edge of the editor workarea.  An arrow drop icon will 
-    appear to indicate which way the editor workarea will be split.</td>
+    workarea.  Grab an editor tab and drag it to the edge of the editor workarea.  The arrow dock icons 
+    (e.g., <img align="texttop" border="0" src="../images/drop_left_source.gif"  alt="Left arrow">)
+	will be used to indicate which way the editor workarea will be split.
+    <p><img border="0" src="images/editor-tiles.gif"></p></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Tasks view quick fixing</b></td>
@@ -435,17 +441,19 @@ and Tricks.]</p>
     <td width="30%" valign="top" align="right"><b>Activating an action set</b></td>
     <td width="70%" valign="top" align="left">Use the <b>Window &gt Customize Perspective &gt Other</b> 
     option to activate action sets for a Perspective.  The action set items will appear on 
-    the Perspective's menus and toolbar.</td>
+    the Perspective's menus and toolbar.
+    <p><img border="0" src="images/perspective-other.gif"></p></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Pinning editors</b></td>
     <td width="70%" valign="top" align="left">When the <b>Close Editors Automatically</b> preference 
     (found on the <b>Windows &gt Preferences &gt Workbench &gt Editors</b> preference page) is active, you can use the 
     <b>Pin Editor</b> toolitem to stop an editor from being closed.
-	The <b>Pin Editor</b> toolitem appears on the workbench toolbar.</td>
+	The <b>Pin Editor</b> toolitem appears on the workbench toolbar.
+    <p><img border="0" src="images/pin-editor.gif"></p></td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>Next/previous navigation</b></td>
+    <td width="30%" valign="top" align="right"><b>Next / previous navigation</b></td>
     <td width="70%" valign="top" align="left">You can use <b>Ctrl+.</b> and <b>Ctrl+,</b> 
     to go to navigate among search matches, editor errors, and compare differences.</td>
   </tr>
@@ -472,7 +480,7 @@ and Tricks.]</p>
 </table>
 
 <p>&nbsp;<br>
-<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a>
+<a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a>
 </p>
 
 </body>
