*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
@@ -20,12 +20,12 @@
       <li>When a breakpoint is enabled, it will cause a thread to suspend whenever
         the breakpoint is reached. Enabled breakpoints are indicated with a blue circle. Enabled breakpoints
         are shown with a checkmark overlay after their class is loaded by the VM
-        and the breakpoint successfully installed.</li>
+        and the breakpoint is successfully installed.</li>
 
       <li>When a breakpoint is disabled, it will not cause threads to suspend. Disabled breakpoints are indicated with a white circle.</li>
     </ul>
 
-    <p>Debugging breakpoints are displayed in the marker bar in the editor area and in the Breakpoints view.</p>
+    <p>Breakpoints are displayed in the vertical editor ruler and in the Breakpoints view.</p>
 
     <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
      <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
